--- a/web/src/app/audios/audios.component.scss
+++ b/web/src/app/audios/audios.component.scss
@@ -19,7 +19,7 @@
     height: 80vh;
     position: relative;
 
-    background-image: url("../../assets/img/image1.png");
+    background-image: url("../../assets/definitive/4.jpg");
     background-size: 50%;
     background-position-x: right;
     background-position-y: center;
