--- a/web/src/app/audio/audio.component.html
+++ b/web/src/app/audio/audio.component.html
@@ -14,7 +14,7 @@
             </h1>
           </div>
           <div class="col-4">
-            <!-- <i class="fas fa-book"></i> -->
+            <i class="fas fa-volume-up"></i>
           </div>
         </div>
       </div>
