--- a/web/src/app/videos/videos.component.scss
+++ b/web/src/app/videos/videos.component.scss
@@ -5,7 +5,7 @@
     height: 80vh;
     position: relative;
 
-    background-image: url("../../assets/img/image1.png");
+    background-image: url("../../assets/definitive/1.jpg");
     background-size: 50%;
     background-position-x: right;
     background-position-y: center;
